feat: implement Telegram service